--- a/ds1m-a/cleiton/index.html
+++ b/ds1m-a/cleiton/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/info.css">
     <link rel="stylesheet" href="./css/personagens.css">
+    <link rel="stylesheet" href="./css/compra.css">
     <link rel="stylesheet" href="./font/berserker-regular-font/Berserker-Regular.ttf">
+    <link rel="stylesheet" href="./css/responsividade.css">
     <script src="js/script.js"></script>
     <script src="https://kit.fontawesome.com/78c0e1b8e9.js" crossorigin="anonymous"></script>
     <title>God of War</title>
@@ -18,23 +20,23 @@
 
 <body>
     <header>
-        <img src="./img/logo.png" alt="" class="logo">
+        <img src="./img/logo-removebg-preview.png" alt="" class="logo">
         <nav>
-            <ul class="menu">
-                <li>
-                    <a href="#home"><span class = "omega">Ω</span>  Home</a>
+            <ul class="menu" id="menu">
+                <li class="menu__home">
+                    <a href="#home">Ω>Home</a>
 
                 </li>
                 <li>
-                    <a href="#info"><span class = "omega">Ω</span>Info</a>
+                    <a href="#info">ΩInfo</a>
 
                 </li>
                 <li>
-                    <a href="#personagens"><span class = "omega">Ω</span>Personagens</a>
+                    <a href="#personagens">ΩPersonagens</a>
 
                 </li>
                 <li>
-                    <a href="#compre"><span class = "omega">Ω</span>Compre</a>
+                    <a href="#compre">ΩCompre</a>
 
                 </li>
 
@@ -44,7 +46,7 @@
     </header>
     <main>
         <section class="home" id="home">
-            <div class="suspenso1"> Kratos e Atreus estão de volta em uma épica aventura até o fim de tudo que conhecemos!
+            <div class="suspenso1">Kratos e Atreus estão de volta em uma épica aventura até o fim de tudo que conhecemos!
             </div>
             <div class="suspenso2">Enfrente Deuses, monstros e mortais aterrorizantes!</div>
             <div class="suspenso3">O Ragnarök está aqui, escolha entre sua segurança e a dos 9 reinos!</div>
@@ -64,16 +66,16 @@
                 <ul class="personagens_lista">
                     <div class="personagens_lista_principal">
                         <li class="personagens_card_principal">
-                            <img src="./img/kratos.png" alt="">
-                            <span onclick="mudarEstado('kratos')">Kratos</span>
+                            <img src="./img/kratos.png" alt="Kratos" href="#kratos" target="blanck">
+                            <span onclick="mudarEstado('kratos')" href="#kratos">Kratos</span>
                             <li class="personagens_card_principal">
-                                <img src="./img/atreus.png" alt="">
+                                <img src="./img/atreus.png" alt="Atreus">
                                 <span onclick="mudarEstado('atreus')">Atreus</span>
                             </li>
                     </div>
                     <ul id="kratos">
                         <li>
-                            <img src="./img/kratos.png" alt="">
+                            <img src="./img/kratos.png" alt="Kratos">
                             <span> O deus da guerra espartano construiu uma nova vida em Midgard. 
                                 A paternidade deu a Kratos um novo propósito. Com o Ragnarök se aproximando, os riscos nunca foram tão altos. Kratos deve se decidir entre proteger
                                 o filho e a vida que construíram juntos ou defender os Nove Reinos da guerra catastrófica.
@@ -87,71 +89,71 @@
                                 Com a iminência do Ragnarök, Atreus quer a todo custo explorar e compreender melhor a própria identidade para encontrar seu lugar no mundo. 
                                 Ele treinou muito com o pai e, embora o relacionamento entre os dois permaneça firme, Atreus anseia por começar a seguir o seu próprio caminho.
                                 </span>
-                            <img src="./img/atreus.png" alt="">
+                            <img src="./img/atreus.png" alt="Atreus">
                         </li>
                     </ul>
                     <div class="personagens_lista_secundarios">
                         <li class="personagens_card">
-                            <img src="./img/thor.png" alt="">
+                            <img src="./img/thor.png" alt="Thor">
                             <span onclick="mudarEstado('thor')">Thor</span>
                         </li>
                         <li class="personagens_card">
-                            <img src="./img/freya.png" alt="">
+                            <img src="./img/freya.png" alt="Freya">
                             <span onclick="mudarEstado('freya')">Freya</span>
                         </li>
                         <li class="personagens_card">
-                            <img src="./img/angrboda.png" alt="">
+                            <img src="./img/angrboda.png" alt="Angrboda">
                             <span onclick="mudarEstado('angrboda')">Angrboda</span>
                         </li>
                         <ul id="thor">
                             <li>
-                                <img src="./img/thor.png" alt="">
-                                <span>Thor, o lendário deus do trovão, é filho de Odin e campeão dos Aesir. 
-                                    Magni e Modi, seus filhos, eram aliados de Baldur e foram mortos por Kratos e Atreus.
-                                </span>
+                                <img src="./img/thor.png" alt="Thor">
+                                <span> Thor, o lendário deus do trovão, é filho de Odin e campeão dos Aesir.
+                                     Magni e Modi, seus filhos, eram aliados de Baldur e foram mortos por Kratos e Atreus.
+                                    </span>
                             </li>
                         </ul>
                         <ul id="freya">
                             <li>
-                                <span>Freya é uma deusa Vanir, já foi líder das Valquírias, ex-mulher de Odin e antiga rainha dos Aesir. 
+                                <span> Freya é uma deusa Vanir, já foi líder das Valquírias, ex-mulher de Odin e antiga rainha dos Aesir. 
                                     Após a morte do seu amado filho Baldur, que estava afastado dela, Freya jurou uma vingança violenta contra Kratos e Atreus.
                                 </span>
-                                <img src="./img/freya.png" alt="">
+                                <img src="./img/freya.png" alt="Freya">
                             </li>
                         </ul>
                         <ul id="angrboda">
                             <li>
-                                <img src="./img/angrboda.png" alt="">
+                                <img src="./img/angrboda.png" alt="Angrboda">
                                 <span> Angrboda faz parte dos últimos Gigantes que restaram. 
                                     Após a queda de Jötunheim, ela se escondeu por muitos anos à espera do momento para concretizar as profecias dos Jötnar.
                                 </span>
                             </li>
                         </ul>
                         <li class="personagens_card">
-                            <img src="./img/tyr.png" alt="">
+                            <img src="./img/tyr.png" class="tyr" alt="Tyr">
                             <span onclick="mudarEstado('tyr')">Tyr</span>
                         </li>
                         <li class="personagens_card">
-                            <img src="./img/brok-e-sindri.png" alt="">
-                            <span onclick="mudarEstado('brok')">Brok e Sindri</span>
+                            <img src="./img/brok-e-sindri.png" alt="Brok e Sindri">
+                            <span onclick="mudarEstado('brok-e-sindri')">Brok e Sindri</span>
                         </li>
                         <li class="personagens_card">
-                            <img src="./img/mimir.png" alt="">
+                            <img src="./img/mimir.png" class="personagem_mimir" alt="Mimir">
                             <span onclick="mudarEstado('mimir')">Mimir</span>
                         </li>
                         <ul id="tyr">
                             <li>
-                                <span> Týr é o deus da guerra Aesir que desapareceu há muito tempo. 
+                                <span>  Týr é o deus da guerra Aesir que desapareceu há muito tempo. 
                                     Ele viajou pelo mundo e se tornou um grande aliado dos Gigantes, buscando a paz entre os Aesir e os Jötnar. 
                                     Quando Odin violou a paz e declarou guerra a Jötunheim, Týr foi aprisionado.
                                 </span>
                                 <img src="./img/tyr.png" alt="">
                             </li>
                         </ul>
-                        <ul id="brok">
+                        <ul id="brok-e-sindri">
                             <li>
                                 <img src="./img/brok-e-sindri.png" alt="">
-                                <span>Brok e Sindri, os Irmãos Huldra, são ferreiros Anões lendários. 
+                                <span> Brok e Sindri, os Irmãos Huldra, são ferreiros Anões lendários. 
                                     Eles são conhecidos ao redor dos Nove Reinos pela impressionante capacidade que têm de forjar armamentos lendários para os deuses. 
                                     Após reatarem a relação há não muito tempo, os irmãos se uniram para apoiar Kratos e Atreus. 
                                     O Ragnarök vai pôr à prova a força da união entre esses dois.
@@ -160,7 +162,7 @@
                         </ul>
                         <ul id="mimir">
                             <li>
-                                <span>Ele pode até ser uma cabeça decepada que depois foi ressuscitada, mas o Mimir continua com o título de homem mais inteligente vivo. 
+                                <span>  Ele pode até ser uma cabeça decepada que depois foi ressuscitada, mas o Mimir continua com o título de homem mais inteligente vivo. 
                                     Quando Kratos e Atreus o libertaram da árvore em que Odin o mantinha aprisionado, 
                                     Mimir se juntou à aventura deles e se tornou um amigo de confiança e conselheiro tanto para o pai quanto para o filho. 
                                     Com os Nove Reinos afundando no caos, agora eles precisarão da sabedoria do Mimir mais do que nunca.
@@ -172,10 +174,22 @@
 
 
         </section>
-        <section class="compre" id="compre"></section>
+        <section class="compre" id="compre">
+            <img class="machado" src="./img/machado.png" alt="">
+            <div class="container__compra">
+                <div>
+                    <img src="./img/compra (2).png" alt=""> Ps4 Version
+                    <span>Compre Aqui</span>
+                </div>
+                <div>
+                    <img src="./img/compra (2).png" alt=""> Ps5 Version
+                    <span>Compre Aqui</span>
+                </div>
+            </div>
+        </section>
 
     </main>
-    <footer>footer</footer>
+    <footer>Desenvolvido por Cleiton Cruz | Todos os direitos reservados </footer>
 </body>
 
 </html>
