--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/patenteImg.css">
     <link rel="stylesheet" href="./css/bo1.css">
+    <link rel="stylesheet" href="./css/imgBo1.css">
+    <link rel="stylesheet" href="./css/textos.css">
     <title>Call of Duty: Black Ops</title>
 </head>
 <body>
@@ -57,9 +59,16 @@
             <div id="linha-horizontal"></div>
         </section>
         <section class="bo1" id="bo1">
-            <div>
-                <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logoBo1">
-            </div>
+           <div class="logoBo1">
+               <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logo_bo1">
+           </div> 
+           <div class="imgBo1">
+                <img src="./img/2011-05-20-codlackops-5 1.png" alt="imgbo1" class="img_bo1">
+                <div class="linhas">
+                    <div id="linha-pequena"></div>
+                    <div id="linha-pequena2"></div>
+                </div>
+           </div>
         </section>
         <section class="bo2" id="bo2"></section>
         <section class="bo3" id="bo3"></section>
