--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=[device-width], initial-scale=1.0">
@@ -23,6 +22,7 @@
     <script src="https://kit.fontawesome.com/b2396ffade.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/backgrounds.css">
     <link rel="stylesheet" href="./css/composers.css">
+    <link rel="stylesheet" href="./css/index-buttons.css">
 </head>
 <body> 
     <section class="home" id="home">
@@ -63,66 +63,67 @@
        
     </section>
     <section class="composers">
-        <div class="composers__wrapper carousel">
-            <ul>
-                <li class="item current-item"id="chopin">
-                    <img src="./img/chopin 1.png" alt="Desenho do Chopin">
-                    <h2>CHOPIN</h2>
-                    <p>Um pianista polonês radicado na França e compositor para piano da era romântica. É amplamente conhecido como um dos maiores compositores para piano e um dos pianistas mais importantes da história.
-                    </p>
-                </li>
-                <li class="item current-item" id="bethoven">
-                    <img src="./img/bethoven 1.png" alt="Desenho do Bethoven">
-                    <h2>BETHOVEN</h2>
-                    <p>Considerado um dos pilares da música ocidental, Bethoven é conhecido pelo incontestável desenvolvimento, tanto da linguagem como do conteúdo musical demonstrado nas suas obras, permanecendo como um dos compositores mais respeitados e mais influentes de todos os tempos.
-                    </p>
-                </li>
-                <li class="item current-item" id="mozart">
-                    <img src="./img/mozart 1.png" alt="Desenho do Mozart">
-                    <h2>MOZART</h2>
-                    <p>Autor de mais de 600 obras, Wolfgang Amadeus Mozart foi um compositor compentente desde os cinco anos de idade. Possuiu habilidades no teclado e violino. Uma de suas maiores composições é a Sinfonia n°40.  
-                    </p>
-                </li>
-                <img src="./img/bg-composers.png" alt="" id="bgcomposers">
-            </ul>
-        </div>
-        <div class="composers__buttons buttons">
-            <button class="arrow-left control" aria-label="Previous image">Previous</button>
-            <button class="arrow-rigth control" aria-label="Next Image">Next</button>
-        </div>
-        <a href="#home">
-            <img src="./img/circle-1.png" alt="" class="index index-composers">
-        </a>
+        <ul id="composers__list">
+            <li class="card" >
+                <img src="./img/chopin 1.png" alt="Desenho do Chopin">
+                <h2>CHOPIN</h2>
+                <p>Um pianista polonês radicado na França e compositor para piano da era romântica. É amplamente conhecido como um dos maiores compositores para piano e um dos pianistas mais importantes da história.
+                </p>
+            </li>
+            <li class="card" >
+                <img src="./img/bethoven 1.png" alt="Desenho do Bethoven">
+                <h2>BETHOVEN</h2>
+                <p>Considerado um dos pilares da música ocidental, Bethoven é conhecido pelo incontestável desenvolvimento, tanto da linguagem como do conteúdo musical demonstrado nas suas obras, permanecendo como um dos compositores mais respeitados e mais influentes de todos os tempos.
+                </p>
+            </li>
+            <li class="card" >
+                <img src="./img/mozart 1.png" alt="Desenho do Mozart">
+                <h2>MOZART</h2>
+                <p>Autor de mais de 600 obras, Wolfgang Amadeus Mozart foi um compositor compentente desde os cinco anos de idade. Possuiu habilidades no teclado e violino. Uma de suas maiores composições é a Sinfonia n°40.  
+                </p>
+            </li>
+            
+        </ul>
+        <nav class="composers__buttons buttons">
+            <button aria-label="Previous image" id="left-button-composers">Previous</button>
+            <button aria-label="Next Image" id="right-button-composers">Next</button>
+        </nav>
+        <button class="index-buttons composers-button"></button>  
+        <img src="./img/bg-composers.png" alt="" id="bgcomposers"> 
     </section>
-    <section class="instruments carousel">
-        <div class="info">
+    <section class="instruments">
+        <div class="instruments__info">
             <p>Alguns instrumentos são mais propensos para a música clássica. </p>
             <p>Estes possuem propriedades de material e de tempo que reforçam isso.</p>
         </div>
-        <ul>
-            <li id="cravo">
-                <img src="./img/cravo.png" alt="Desenho do cravo">
-                <h2>CRAVO</h2>
-                <p>Surgindo ao século XV, o Cravo é um instrumento de cordas pinçadas semelhante ao piano. Possui som tangendo ou beliscando as cordas. Ele veio antes do piano existir.
-                </p>
-            </li>
-            <li id="piano">
-                <img src="./img/piano.png" alt="Imagem de um piano">
-                <h2>PIANO</h2>
-                <p>O Piano é um instrumento de cordas percussivas com som semelhante ao de uma harpa. É considerado uns dos mais difíceis instrumentos de tocar. Foi um dos principais instrumentos de Bethoven.
-                </p>
-            </li>
-            <li id="violino">
-                <img src="./img/violino.png" alt="Imagem de um violion">
-                <h2>VIOLINO</h2>
-                <p>O instrumento de cordas mais agudo de sua família, o violino possui um arco que o caracteriza como instrumento de atrito. Possui um som doce e suave. 
-                </p>
-            </li>
-            <img src="./img/bg-instruments.png" alt="" id="bginstruments">
-        </ul>
-        <a href="#home">
-            <img src="./img/circle-2.png" alt="" class="index">
-        </a>
+        <div class="instruments__wrapper carousel">
+            <ul>
+                <li id="cravo">
+                    <img src="./img/cravo.png" alt="Desenho do cravo">
+                    <h2>CRAVO</h2>
+                    <p>Surgindo ao século XV, o Cravo é um instrumento de cordas pinçadas semelhante ao piano. Possui som tangendo ou beliscando as cordas. Ele veio antes do piano existir.
+                    </p>
+                </li>
+                <li id="piano">
+                    <img src="./img/piano.png" alt="Imagem de um piano">
+                    <h2>PIANO</h2>
+                    <p>O Piano é um instrumento de cordas percussivas com som semelhante ao de uma harpa. É considerado uns dos mais difíceis instrumentos de tocar. Foi um dos principais instrumentos de Bethoven.
+                    </p>
+                </li>
+                <li id="violino">
+                    <img src="./img/violino.png" alt="Imagem de um violion">
+                    <h2>VIOLINO</h2>
+                    <p>O instrumento de cordas mais agudo de sua família, o violino possui um arco que o caracteriza como instrumento de atrito. Possui um som doce e suave. 
+                    </p>
+                </li>
+                <img src="./img/bg-instruments.png" alt="" id="bginstruments">
+            </ul>
+        </div>
+        <!-- <nav class="instruments__buttons buttons">
+            <button class="arrow-left control" aria-label="Previous image">Previous</button>
+            <button class="arrow-rigth control" aria-label="Next Image">Next</button>
+        </nav> -->
+        <button class="index-buttons instruments-button"></button>  
     </section>
     <section class="about">
         <div class="about__container">
