--- a/ds1m-b/Paula-B/index.html
+++ b/ds1m-b/Paula-B/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/sobre.css">
     <link rel="stylesheet" href="./css/raças.css">
     <link rel="stylesheet" href="./css/curiosidades.css">
     <link rel="stylesheet" href="./css/slider-images.css">
     <link rel="stylesheet" href="./css/cuidados.css">
     <link rel="stylesheet" href="./css/porque.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
 
-
+    <script src="./js/sign-language.js"></script>
     <script src="https://kit.fontawesome.com/6cc8a6f404.js" crossorigin="anonymous"></script>
 
     <title>a cat's life</title>
@@ -133,7 +134,7 @@
                 <P>Exótico</P>
 
             </div>
-            <div class="racas-container">
+            <div class="racas-containeer">
                 <div class="raca">
                     <a href="https://www.petz.com.br/gato/racas/angora/" class="card" target="_blank">
                         <img class="raca__image" src="./img/angora.png" alt="">
@@ -279,6 +280,12 @@
         </section>
     </main>
     <footer> Copyright ©️ | Todos os Direitos Reservados 2022 | Desenvolvido por Paula Blesa</footer>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
     <script>
         showSlidesImages();
     </script>
