--- a/ds1t-b/yasmin/index.html
+++ b/ds1t-b/yasmin/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/sobre.css">
     <link rel="stylesheet" href="./css/destinos.css">
+    <link rel="stylesheet" href="./css/avaliacoes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap" rel="stylesheet">
@@ -80,16 +81,27 @@
             </div>
         </section>
 
-        <section class="avaliacoes" id="avaliacoes"></section>
-
+        <section class="avaliacoes" id="avaliacoes">
+            <h3 class="avaliacoes__title">Sua satisfação é a nossa!</h3>
             <div class="avaliacoes__divs">
-                <div class="avaliacoes1">
-                    
-                </div>
+                <div class="avaliacoesl1">
+                    <div class="av">
+                        <p>“Destinos maravilhosos e pessoas também! Todos os guias super educados que me proporcionaram a melhor experiência que eu poderia ter! Com certeza farei mais viagens com a TRVLS!”</p>
+                        <p>Paulo, 2022</p>
+                    </div>
+                    <div class="av">
+                        <p>“A viagem mais incrível da minha vida! Eu e minha família amamos o lugar, a alimentação e não tivemos nenhuma complicação, todos super atenciosos e preocupados com a satisfação do cliente!”</p>
+                        <p>Michael, 2022</p>
+                    </div>        
             </div>
-
-
-        <section class="contato" id="contato"></section>
+            <div class="avaliacoesl2">
+                <div class="av">
+                    <p>“Amei a experiência! Tive a oportunidade de passar minhas férias no Rio com minha família e a TRVLS superou as nossas expectativas! Todos os passeios foram repletos de memórias incríveis!”</p>
+                    <p>Luciana, 2022</p>
+                </div>
+            </div> 
+        </section>
+    <section class="contato" id="contato"></section>
 
     </main>
     <footer>
