Section Personagens completa

--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -24,10 +24,21 @@
     <link rel="stylesheet" href="criadores.css">
     <link rel="stylesheet" href="contatos.css">
     <link rel="stylesheet" href="criadores.css">
+    <link rel="stylesheet" href="style.css">
     <title>Final Fantasy VII</title>
 </head>
 
 <body>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
     <main>
         <a href="#home" class="back">
             <i class="fas fa-angle-double-up"></i>
@@ -90,7 +101,15 @@
             <div class="titulo-personagens">
                 <p class="titulo">Personagens</p>
             </div>
-
+                <div class="blocos-personagens">
+                   <div class="icones-personagens">
+                       <img class="icone" src="./img/Aerith.png" alt="">
+                       <img class="icone" src="./img/Tifa.png" alt="">
+                       <img class="icone" src="./img/Cloud (1).png" alt="">
+                       <img class="icone" src="./img/Barret (1).png" alt="">
+                       <img class="icone" src="./img/Sephiroth.png" alt="">
+                   </div>
+            </div>
         </section>
         <section class="producao" id="producao">
             <div class="titulo-producao">
@@ -111,7 +130,7 @@
             <div class="conclu">
                 <div class="bloco-producao">
                     <img class="imagem-producao" src="./img/Conclusao-producao (1).png" alt="">
-                    <p class="texto-producao">    Uma enorme campanha de divulgação foi feita, e Final Fantasy VII se tornou um sucesso de publico e de crítica, tendo ganhado os prêmios de jogo do ano, melhor RPG do ano e melhor jogo do Playstation, além de ter vendido mais de 1 milhão de cópias só em 1997.</p>
+                    <p class="texto-producao">    Uma enorme campanha de divulgação foi feita, e Final Fantasy VII se tornou um sucesso de público e de crítica, tendo ganhado os prêmios de jogo do ano, melhor RPG do ano e melhor jogo do Playstation, além de ter vendido mais de 1 milhão de cópias só em 1997.</p>
                 </div>
             </div>
         </section>
