--- a/ds1t-a/Luiz Gustavo/index.html
+++ b/ds1t-a/Luiz Gustavo/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="menu-bar">
             <div class="logo">
-                <img src="/img/MAÇÃ.png" alt="logo">
+                <img src="/img/MAÇÃ.png" alt="logo" class="img-logo">
                 <p class="text-logo">APPLE</p>
             </div>
             <ul class="lista-menu">
@@ -73,9 +73,7 @@
             <div class="main-home">
                 <div class="home-text">
                     <h1 class="title-apple">Apple</h1>
-                    <p class="text-apple">É uma empresa multinacional norte-americana que tem o objetivo de projetar e
-                        comercializar produtos eletrônicos de consumo, software de computador e computadores pessoais.
-                        Os produtos de hardware mais conhecidos da empresa incluem
+                    <p class="text-apple">É uma empresa multinacional norte-americana que tem o objetivo de projetar e comercializar produtos eletrônicos de consumo, software de computador e computadores pessoais. Os produtos de hardware mais conhecidos da empresa incluem
                         a linha de computadores Macintosh, iPod, iPhone, iPad, Apple TV e o Apple Watch.
                     </p>
                 </div>
@@ -83,8 +81,8 @@
             </div>
 
             <div class="logo-footer">
-                <img src="/img/MAÇÃ.png" alt="logo">
-                <p class="text-logo">APPLE</p>
+                <img src="/img/MAÇÃ.png" alt="logo" class="img-logo-footer">
+                <p class="text-logo-footer">APPLE</p>
             </div>
 
         </section>
@@ -99,23 +97,19 @@
             <div class="main-right">
                 <h1 class="title">IPhone</h1>
                 <p class="text">
-                    iPhone é uma linha de smartphones desenvolvidos e comercializados pela Apple Inc. É o único
-                    smartphone a operar com o sistema operacional móvel iOS. A primeira geração do iPhone foi lançada em
-                    29 de junho de 2007, desde então, a Apple lançou novos modelos
-                    anualmente sendo o iPhone 14, iPhone 14 Plus, iPhone 14 Pro e iPhone 14 Pro Max os modelos mais
-                    recentes. A linha ‘14’ do iPhone foi anunciada em 7 de setembro de 2022 na conferência anual da
-                    Apple, transmitida na Apple Park, em Cupertino.
+                    iPhone é uma linha de smartphones desenvolvidos e comercializados pela Apple Inc. É o único smartphone a operar com o sistema operacional móvel iOS. A primeira geração do iPhone foi lançada em 29 de junho de 2007, desde então, a Apple lançou novos modelos
+                    anualmente sendo o iPhone 14, iPhone 14 Plus, iPhone 14 Pro e iPhone 14 Pro Max os modelos mais recentes. A linha ‘14’ do iPhone foi anunciada em 7 de setembro de 2022 na conferência anual da Apple, transmitida na Apple Park, em Cupertino.
                 </p>
                 <img src="/img/IPHONE 14 PRO.png" alt="iphone14" class="iphone14">
             </div>
+
+
         </section>
         <section class="section-ipad" id="ipad">
             <h1 class="title">IPad</h1>
             <div class="main-ipad">
                 <p class="text">
-                    A linha iPad Pro compreende os tablets estado-da-arte da Apple. Estes contam com telas de 11 e 12,9
-                    polegadas, tecnologia True Tone e taxa de atualização de 120 Hz (que a Apple chama de ProMotion), o
-                    poderoso processador exclusivo Apple A12X Bionic, mais
+                    A linha iPad Pro compreende os tablets estado-da-arte da Apple. Estes contam com telas de 11 e 12,9 polegadas, tecnologia True Tone e taxa de atualização de 120 Hz (que a Apple chama de ProMotion), o poderoso processador exclusivo Apple A12X Bionic, mais
                     RAM (4 ou 6 GB), e um corpo com bordas finas e sem botão Home.
                 </p>
                 <img src="/img/ipad.png" alt="ipad" class="img-ipad">
@@ -132,10 +126,7 @@
             <div class="main-mac">
                 <div class="main-left">
                     <p class="text">
-                        Atualmente a apple conta com 3 versões da sua linha desktop, o IMac, AirMac e o Mac. Sendo o
-                        AirMac como se fosse um notebook,
-                        o mac uma computador padrão não tem monitor outro tipo de periférico embutido e o IMac é um
-                        computador embutido em um monitor
+                        Atualmente a apple conta com 3 versões da sua linha desktop, o IMac, AirMac e o Mac. Sendo o AirMac como se fosse um notebook, o mac uma computador padrão não tem monitor outro tipo de periférico embutido e o IMac é um computador embutido em um monitor
                         de alta qualidade e de tamanho a partir de 24 polegadas.
                     </p>
                     <img src="/img/VERSÕES MAC's.png" alt="macs" class="macs">
@@ -143,9 +134,7 @@
                 <div class="main-right">
                     <img src="/img/MacBook Pro.png" alt="mac-pro" class="mac-pro">
                     <p class="text">
-                        O desktop mais atual é o Macbook pro, Os dois podem ser configurados com o chip M1 Pro ou o M1
-                        Max
-                        e oferecem um desempenho profissional incomparável. Veja no clicando no botão:
+                        O desktop mais atual é o Macbook pro, Os dois podem ser configurados com o chip M1 Pro ou o M1 Max e oferecem um desempenho profissional incomparável. Veja no clicando no botão:
                     </p>
                     <a href="https://www.apple.com/br/macbook-pro-13/" class="button-iphone-mac">Clique Aqui</a>
                 </div>
@@ -158,8 +147,7 @@
             <div class="airpods">
                 <div class="main-airpods">
                     <p class="text-airpods">
-                        AirPods é uma linha de fones bluetooth desenvolvidos pela Apple.
-                        A primeira geração foi lançada em setembro de 2016 e a sua segunda geração em março de 2019.
+                        AirPods é uma linha de fones bluetooth desenvolvidos pela Apple. A primeira geração foi lançada em setembro de 2016 e a sua segunda geração em março de 2019.
                     </p>
                     <div class="airpods-pro">
                         <img src="/img/AirPods Pro.png" alt="airpods" class="airpods-pro">
@@ -174,11 +162,8 @@
             </div>
             <div class="main-watch">
                 <p class="text-watch">
-                    O Apple Watch (estilizado como WATCH) é uma linha de relógios inteligentes criado pela Apple.
-                    Ele possui a capacidade de rastrear exercícios físicos, recursos voltados para a saúde,
-                    comunicações sem fio e é integrado com o iOS e outros produtos da Apple para realização de algumas
-                    ações.
-                    Clique no botão e vejo o Apple Watch Series 6 o mais avaçado atualmente:
+                    O Apple Watch (estilizado como WATCH) é uma linha de relógios inteligentes criado pela Apple. Ele possui a capacidade de rastrear exercícios físicos, recursos voltados para a saúde, comunicações sem fio e é integrado com o iOS e outros produtos da Apple
+                    para realização de algumas ações. Clique no botão e vejo o Apple Watch Series 6 o mais avaçado atualmente:
                 </p>
                 <img src="/img/WATCH.png" alt="watch" class="watch">
                 <a href="https://www.apple.com/br/apple-watch-ultra/" class="button-ipad-airpos-watch ">Clique Aqui</a>
@@ -188,7 +173,7 @@
         <section class="section-contato" id="contato">
             <div class="title-contato">CONTATO</div>
             <div class="main-contato">
-                
+
                 <div class="contatos">
                     <h2 class="sub-title">Contato</h2>
                     <ul class="contato-container">
