--- a/ds1t-b/claudioSousa/index.html
+++ b/ds1t-b/claudioSousa/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site da melhor churrascaria da zona oeste">
     <title>Churrascaria Sousa</title>
 
     <link rel="stylesheet" href="CSS/title.css">
@@ -184,16 +185,16 @@
             
                 </li>
                 <li>
-                    <a href="#">Inicio</a>
+                    <a href="#home">Inicio</a>
                 </li>
                 <li>
-                    <a href="#">Cardápio</a>
+                    <a href="#cardapio">Cardápio</a>
                 </li>
                 <li>
-                    <a href="#">Reservas</a>
+                    <a href="#reservas">Reservas</a>
                 </li>
                 <li>
-                    <a href="#">Localização</a>
+                    <a href="#localizacao">Localização</a>
                 </li>
                 <li>
                     <a href="#contato">Contato</a>
