Responsividade Mobile feita

--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -143,5 +143,8 @@
             <p class="contato-text">andreluis081205@gmail.com</p>
         </div>
     </section>
+    <footer>
+        <span>Todos os direitos reservados a AndréLuiz</span>
+    </footer>
 </body>
 </html>
