Section Home mobile completa

--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="historia.css">
     <link rel="stylesheet" href="back.css">
-    <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="personagens.css">
     <link rel="stylesheet" href="producao.css">
     <link rel="stylesheet" href="criadores.css">
@@ -29,7 +28,7 @@
 </head>
 
 <body>
-    <div vw class="enabled">
+    <!--<div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
           <div class="vw-plugin-top-wrapper"></div>
@@ -38,7 +37,7 @@
       <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
       <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
-      </script>
+      </script> -->
     <main>
         <a href="#home" class="back">
             <i class="fas fa-angle-double-up"></i>
