Responsividade Mobile finalizada

--- a/ds1t-a/Luiz Gustavo/index.html
+++ b/ds1t-a/Luiz Gustavo/index.html
@@ -31,6 +31,9 @@
                 <img src="/img/MAÇÃ.png" alt="logo" class="img-logo">
                 <p class="text-logo">APPLE</p>
             </div>
+            <div class="menu">
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <ul class="lista-menu">
 
                 <li id="li-inicio">
@@ -102,8 +105,6 @@
                 </p>
                 <img src="/img/IPHONE 14 PRO.png" alt="iphone14" class="iphone14">
             </div>
-
-
         </section>
         <section class="section-ipad" id="ipad">
             <h1 class="title">IPad</h1>
@@ -142,7 +143,7 @@
         </section>
         <section class="section-airpods-watch" id="airpods-watch">
             <div class="div-title">
-                <h1 class="title-airpod">Airpods</h1>
+                <h1 class="title">Airpods</h1>
             </div>
             <div class="airpods">
                 <div class="main-airpods">
@@ -150,7 +151,7 @@
                         AirPods é uma linha de fones bluetooth desenvolvidos pela Apple. A primeira geração foi lançada em setembro de 2016 e a sua segunda geração em março de 2019.
                     </p>
                     <div class="airpods-pro">
-                        <img src="/img/AirPods Pro.png" alt="airpods" class="airpods-pro">
+                        <img src="/img/AirPods Pro.png" alt="airpods" class="img-airpods-pro">
                         <p class="text-button-airpods">Clique no botão e vejo o mais atual, o Airpos Pro:</p>
                     </div>
                 </div>
