--- a/ds1t-a/one-page-doceria/index.html
+++ b/ds1t-a/one-page-doceria/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/menu-cardapio.css">
     <title>Gulart's</title>
 </head>
 <body>
@@ -44,7 +45,27 @@
                 Gulart’s a doceria com muitas Gulas feitas de Arte
             </h1>
         </section>
-        <section class="menu-cardapio" id="menu-cardapio"></section>
+        <section class="menu-cardapio" id="menu-cardapio">
+            <h1 class="titulo">
+                NataLandia
+            </h1>
+            
+            <div class="frangao">
+                <div class="item-cardapio-frango">
+                <div class="img-frango">
+                    <img src="img/image 14.png" alt="">
+                </div>
+                <p class="titulo-frango">
+                    Frango Assado</p>
+                <div class="preco-add">
+                <p class="preco">
+                    Preço <span class="valor">R$60,00</span></p>
+                <a href="#" class="add">
+                    Add +</a>
+                </div>
+            </div>
+            </div>
+        </section>
         <section class="about-us" id="about"></section>
         <section class="contato" id="contato"></section>
     </main>
