inicio do javascript

--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/tab.css">
     <link rel="stylesheet" href="./css/smartwatch.css">
     <link rel="stylesheet" href="./css/informacoes.css">
+    <script src="main.js"></script>
 </head>
 
 <body>
@@ -49,7 +50,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="menubar-container">
+        <div class="menubar-container" id="btn-mobile">
             <i class="fa-solid fa-bars"></i>
         </div>
     </header>
@@ -130,9 +131,15 @@
             <img src="./img/criador-image.png" alt="Imagem do criador">
             <p class="criador-text">André Luiz</p>
             <div class="icons-container">
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-facebook"></i>
+                <a href="#">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
             </div>
         </div>
         <div class="informacoes-contato-container">
