--- a/ds1t-a/Luiz Gustavo/index.html
+++ b/ds1t-a/Luiz Gustavo/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="menu-bar">
             <div class="logo">
-                <img src="/img/MAÇÃ.png" alt="logo" class="img-logo">
+                <img src="/img/simbolo-apple.png" alt="logo" class="img-logo">
                 <p class="text-logo">APPLE</p>
             </div>
             <div class="menu">
@@ -80,18 +80,18 @@
                         a linha de computadores Macintosh, iPod, iPhone, iPad, Apple TV e o Apple Watch.
                     </p>
                 </div>
-                <img src="/img/PRODUTOS.png" alt="produtos" class="img-produtos">
+                <img src="/img/produtos.png" alt="produtos" class="img-produtos">
             </div>
 
             <div class="logo-footer">
-                <img src="/img/MAÇÃ.png" alt="logo" class="img-logo-footer">
+                <img src="/img/simbolo-apple.png" alt="logo" class="img-logo-footer">
                 <p class="text-logo-footer">APPLE</p>
             </div>
 
         </section>
         <section class="section-iphone" id="iphone">
             <div class="main-left">
-                <img src="/img/IPHONES.png" alt="iphones" class="iphones">s
+                <img src="/img/iphones.png" alt="iphones" class="iphones">s
                 <p class="text-button">
                     IPhone 14 pro o mais potente e tecnologico atualmente, clique no botão e veja:
                 </p>
@@ -103,7 +103,7 @@
                     iPhone é uma linha de smartphones desenvolvidos e comercializados pela Apple Inc. É o único smartphone a operar com o sistema operacional móvel iOS. A primeira geração do iPhone foi lançada em 29 de junho de 2007, desde então, a Apple lançou novos modelos
                     anualmente sendo o iPhone 14, iPhone 14 Plus, iPhone 14 Pro e iPhone 14 Pro Max os modelos mais recentes. A linha ‘14’ do iPhone foi anunciada em 7 de setembro de 2022 na conferência anual da Apple, transmitida na Apple Park, em Cupertino.
                 </p>
-                <img src="/img/IPHONE 14 PRO.png" alt="iphone14" class="iphone14">
+                <img src="/img/iphone-14.png" alt="iphone14" class="iphone14">
             </div>
         </section>
         <section class="section-ipad" id="ipad">
@@ -130,10 +130,10 @@
                         Atualmente a apple conta com 3 versões da sua linha desktop, o IMac, AirMac e o Mac. Sendo o AirMac como se fosse um notebook, o mac uma computador padrão não tem monitor outro tipo de periférico embutido e o IMac é um computador embutido em um monitor
                         de alta qualidade e de tamanho a partir de 24 polegadas.
                     </p>
-                    <img src="/img/VERSÕES MAC's.png" alt="macs" class="macs">
+                    <img src="/img/variedades-mac.png" alt="macs" class="macs">
                 </div>
                 <div class="main-right">
-                    <img src="/img/MacBook Pro.png" alt="mac-pro" class="mac-pro">
+                    <img src="/img/mac-pro.png" alt="mac-pro" class="mac-pro">
                     <p class="text">
                         O desktop mais atual é o Macbook pro, Os dois podem ser configurados com o chip M1 Pro ou o M1 Max e oferecem um desempenho profissional incomparável. Veja no clicando no botão:
                     </p>
@@ -151,7 +151,7 @@
                         AirPods é uma linha de fones bluetooth desenvolvidos pela Apple. A primeira geração foi lançada em setembro de 2016 e a sua segunda geração em março de 2019.
                     </p>
                     <div class="airpods-pro">
-                        <img src="/img/AirPods Pro.png" alt="airpods" class="img-airpods-pro">
+                        <img src="/img/airpods-pro.png" alt="airpods" class="img-airpods-pro">
                         <p class="text-button-airpods">Clique no botão e vejo o mais atual, o Airpos Pro:</p>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                     O Apple Watch (estilizado como WATCH) é uma linha de relógios inteligentes criado pela Apple. Ele possui a capacidade de rastrear exercícios físicos, recursos voltados para a saúde, comunicações sem fio e é integrado com o iOS e outros produtos da Apple
                     para realização de algumas ações. Clique no botão e vejo o Apple Watch Series 6 o mais avaçado atualmente:
                 </p>
-                <img src="/img/WATCH.png" alt="watch" class="watch">
+                <img src="/img/watch.png" alt="watch" class="watch">
                 <a href="https://www.apple.com/br/apple-watch-ultra/" class="button-ipad-airpos-watch ">Clique Aqui</a>
             </div>
             </div>
