--- a/ds1t-a/lohannes/index.html
+++ b/ds1t-a/lohannes/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/dropdown.css">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/descricao.css">
+    <link rel="stylesheet" href="./css/atla.css">
+    <link rel="stylesheet" href="./css/icones-atla.css">
     <title>Avatar - A Lenda</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Marcellus+SC&family=Permanent+Marker&family=Sarala:wght@400;700&display=swap"
@@ -45,11 +48,71 @@
     </header>
     <main>
         <section id="home">
-           <img class="principal" src="./images/Intro.png" alt="">
-           <img class="grande_logo" src="./images/Logo.png" alt="">
+            <img class="principal" src="./images/Intro.png" alt="">
+            <img class="grande_logo" src="./images/Logo.png" alt="">
         </section>
-        <section id="oQueEAvatar"></section>
-        <section id="atla_Personagens"></section>
+        <section id="oQueEAvatar">
+            <h2 class="titulo">O que é Avatar?</h2>
+            <img src="./images/wan.png" alt="" class="wan">
+            <p class="descricao_serie">Uma animação da Nickelodeon, com duas temporadas divididas em 3 e 4 “livros”
+                (termo usado para representar as partes de cada temporada), criado em Fevereiro de 2005.
+
+                Conta a história de um mundo em que existem pessoas que podem controlar um dos quatro elementos da
+                natureza, <span class="letraFogo">Fogo</span>, <span class="letraAr">Ar</span>, <span
+                    class="letraAgua">Água</span> e <span class="letraTerra">Terra</span>. Nesse mesmo mundo, a cada 100
+                anos nasce alguém com o poder de
+                controlar todos os quatro elementos, pois é a reencarnação de um espírito antigo chamado “Raava”.
+
+                Sempre focando no Avatar e em seu grupo de amigos, cada temporada mostra ele lidando com diversos vilões
+                com motivações diferentes e objetivos diferentes.
+            </p>
+        </section>
+        <section id="atla_Personagens">
+            <div class="introducao">
+                <img src="./images/atlaLogo.png" alt="" class="atla_logo">
+                <h3 class="descricao_Atla">Conta sobre o pequeno Aang, que em sua infância descobriu que era o Avatar, e
+                    com medo da responsabilidade acabou fugindo e de alguma forma se congelando por 100 anos, até ser
+                    encontrado por Sokka e Katara durante o ataque da Nação do Fogo.</h3>
+            </div>
+            <p class="instrucao">Coloque o mouse sobre algum dos ícones para conhecer os personagens</p>
+            <div class="icones">
+                <div class="esquerdo">
+                    <a href="#a" type="" class="aangIcone">
+                        <div class="aang">
+                            <img src="./images/aangAtla.png" alt="" class="aang_foto">
+                            <div class="aangInfo">
+                                <h1 id="title" class="nomeAang">Aang</h1>
+                                <p id="desc" class="descAang">Aang é um jovem brincalhão de 112 anos, o último da cultura dos
+                                    Monges do Ar. Descobriu que era o avatar durante a infância antes de realmente
+                                    anunciarem, se assustando com a responsabilidade de ser a pessoa que defenderia o
+                                    mundo e um grande poder político e fugindo de sua casa. Acabou por cair no mar e se
+                                    afogar, mas seus poderes ocultos o prenderam em um grande pedaço de gelo, o
+                                    adormecendo por 100 anos.
+
+                                    Foi encontrado por duas pessoas da tribo da água, se soltando junto de seu mascote
+                                    Appa e agora precisando fazer seu dever como Avatar para impedir que a Nação do Fogo
+                                    dominasse todas as outras nações do mundo.</p>
+                            </div>
+                            <div class="info2">
+                                <div class="elemento"></div>
+                                <img src="./images/inicio.gif" alt="" class="aangGif">
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#a" type="" class="kataraSokkaIcone">
+                        <div class="katara-sokka"></div>
+                    </a>
+                </div>
+                <div class="direito">
+                    <a href="#a" type="" class="tophIcone">
+                        <div class="toph"></div>
+                    </a>
+                    <a href="#a" type="" class="zukoIcone">
+                        <div class="zuko"></div>
+                    </a>
+                </div>
+            </div>
+        </section>
         <section id="atlok_Personagens"></section>
         <section id="nacoes"></section>
         <section id="elementos"></section>
