--- a/ds1t-b/projeto-hamburguer/index.html
+++ b/ds1t-b/projeto-hamburguer/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,10 +32,13 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/quem-somos.css">
     <link rel="stylesheet" href="./css/cardapio.css">
-    <link rel="stylesheet" href="./css/unidades.css">
+    <link rel="stylesheet" href="./css//unidades.css">
     <link rel="stylesheet" href="./css/section-title.css">
     <link rel="stylesheet" href="./css/contato.css">
+    <link rel="stylesheet" href="./css/bars.css">
+    <link rel="stylesheet" href="./css/back.css">
     <link rel="stylesheet" href="./css/vlibras.css">
+    <script src="./js/bars.js" defer></script>
     <title>Le Pinguê</title>
 </head>
 
@@ -115,9 +117,9 @@
             <script src="./js/slider.js"></script>
 
             <div class="container__text">
-                <p class="home__text">A CASA DO HAMBURGUER</p>
+                <p class="home__text1">A CASA DO HAMBURGUER</p>
                 <div class="home__line"></div>
-                <span class="home__text">QUAL O SEU GOSTO?</span>
+                <span class="home__text2">QUAL O SEU GOSTO?</span>
                 <span class="home__text__service">service - delivery - express</span>
             </div>
             <a href="#cardapio" class="button__container">
