--- a/ds1m-a/cleiton/index.html
+++ b/ds1m-a/cleiton/index.html
@@ -34,7 +34,7 @@
         <nav>
             <ul class="menu" id="menu">
                 <li class="menu__home">
-                    <a href="#home">Ω>Home</a>
+                    <a href="#home">ΩHome</a>
 
                 </li>
                 <li>
@@ -77,11 +77,12 @@
                     <div class="personagens_lista_principal">
                         <li class="personagens_card_principal">
                             <img src="./img/kratos.png" alt="Kratos" href="#kratos" target="blanck">
-                            <span onclick="mudarEstado('kratos')" href="#kratos">Kratos</span>
-                            <li class="personagens_card_principal">
-                                <img src="./img/atreus.png" alt="Atreus">
-                                <span onclick="mudarEstado('atreus')">Atreus</span>
-                            </li>
+                            <a onclick="mudarEstado('kratos')" href="#kratos">Kratos</a>
+                        </li>
+                        <li class="personagens_card_principal">
+                            <img src="./img/atreus.png" alt="Atreus">
+                            <a onclick="mudarEstado('atreus')" href="#atreus">Atreus</a>
+                        </li>
                     </div>
                     <ul id="kratos">
                         <li>
@@ -105,15 +106,15 @@
                     <div class="personagens_lista_secundarios">
                         <li class="personagens_card">
                             <img src="./img/thor.png" alt="Thor">
-                            <span onclick="mudarEstado('thor')">Thor</span>
+                            <a onclick="mudarEstado('thor')" href="#thor">Thor</a>
                         </li>
                         <li class="personagens_card">
                             <img src="./img/freya.png" alt="Freya">
-                            <span onclick="mudarEstado('freya')">Freya</span>
+                            <a onclick="mudarEstado('freya')" href="#freya">Freya</a>
                         </li>
                         <li class="personagens_card">
                             <img src="./img/angrboda.png" alt="Angrboda">
-                            <span onclick="mudarEstado('angrboda')">Angrboda</span>
+                            <a onclick="mudarEstado('angrboda')" href="#angrboda">Angrboda</a>
                         </li>
                         <ul id="thor">
                             <li>
@@ -141,15 +142,15 @@
                         </ul>
                         <li class="personagens_card">
                             <img src="./img/tyr.png" class="tyr" alt="Tyr">
-                            <span onclick="mudarEstado('tyr')">Tyr</span>
+                            <a onclick="mudarEstado('tyr')" href="#tyr">Tyr</a>
                         </li>
                         <li class="personagens_card">
                             <img src="./img/brok-e-sindri.png" alt="Brok e Sindri">
-                            <span onclick="mudarEstado('brok-e-sindri')">Brok e Sindri</span>
+                            <a onclick="mudarEstado('brok-e-sindri')" href="#brok-e-sindri">Brok e Sindri</a>
                         </li>
                         <li class="personagens_card">
                             <img src="./img/mimir.png" class="personagem_mimir" alt="Mimir">
-                            <span onclick="mudarEstado('mimir')">Mimir</span>
+                            <a onclick="mudarEstado('mimir')" href="#mimir">Mimir</a>
                         </li>
                         <ul id="tyr">
                             <li>
@@ -189,11 +190,11 @@
             <div class="container__compra">
                 <div>
                     <img src="./img/compra (2).png" alt=""> Ps4 Version
-                    <span>Compre Aqui</span>
+                    <a href="https://www.amazon.com.br/God-War-Ragnar%C3%B6k-Standard-PlayStation/dp/B0BH58QPYN" target="blank">Compre Aqui</a>
                 </div>
                 <div>
                     <img src="./img/compra (2).png" alt=""> Ps5 Version
-                    <span>Compre Aqui</span>
+                    <a href="https://www.amazon.com.br/God-War-Ragnar%C3%B6k-Lan%C3%A7amento-PlayStation/dp/B0B64SBV14" target="blank">Compre Aqui</a>
                 </div>
             </div>
         </section>
