--- a/ds1m-a/cleiton/index.html
+++ b/ds1m-a/cleiton/index.html
@@ -34,7 +34,7 @@
         <nav>
             <ul class="menu" id="menu">
                 <li class="menu__home">
-                    <a href="#home">ΩHome</a>
+                    <a href="#home">Ω"Home</a>
 
                 </li>
                 <li>
